--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ selenium>=4.15.0
 openai>=1.0.0
 pyautogui>=0.9.54
 undetected-chromedriver>=3.5.4
-flask>=3.0.0
-flask-cors>=4.0.0
 pandas>=2.1.0
 beautifulsoup4>=4.12.0
+python-docx>=1.1.0
+PyPDF2>=3.0.1
+reportlab>=4.0.0
